# tetris

./: .gitignore  LICENSE  cabal.project  default.nix  tetris.cabal
app/: Action.hs  Main.hs  Piece.hs  Render.hs  Space.hs  Tetris.hs
nix/: sources.json
