cabal-version:       >=1.10

name:                tetris
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              tuesta
maintainer:          tuesta@protonmail.com
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable tetris
  main-is:             Main.hs

  other-modules:       Tetris
                     , Piece
                     , Space
                     , Action
                     , Render

  default-extensions:   LambdaCase
                      , MultiWayIf
                      , ScopedTypeVariables
                      , TupleSections
                      , TypeApplications

  ghc-options:         -Wall -Wno-unticked-promoted-constructors
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -O2

  build-depends:       base
                     , containers
                     , MonadRandom, random
                     , dunai
                     , sdl2
  hs-source-dirs:      app
  default-language:    Haskell2010
